Fixed a bug in showing navbar on mobile view

--- a/styles/sass/main.css
+++ b/styles/sass/main.css
@@ -1952,14 +1952,6 @@ video {
   right: 0;
 }
 
-/* .header-nav .menu-item-has-children:hover > .sub-menu,
-.andro_flex-menu .menu-item-has-children:hover .sub-menu,
-.andro_header .menu-item-has-children:hover .sub-menu {
-  -webkit-transform: rotateX(0deg);
-  transform: rotateX(0deg);
-  opacity: 1;
-  visibility: visible;
-} */
 .andro_header .sub-menu li {
   display: flex;
   align-items: center;
