--- a/styles/sass/module/_header-navbar.scss
+++ b/styles/sass/module/_header-navbar.scss
@@ -65,14 +65,6 @@
   right: 0;
 }
 
-/* .header-nav .menu-item-has-children:hover > .sub-menu,
-.andro_flex-menu .menu-item-has-children:hover .sub-menu,
-.andro_header .menu-item-has-children:hover .sub-menu {
-  -webkit-transform: rotateX(0deg);
-  transform: rotateX(0deg);
-  opacity: 1;
-  visibility: visible;
-} */
 .andro_header .sub-menu li {
   display: flex;
   align-items: center;
